--- a/css/prototype.css
+++ b/css/prototype.css
@@ -1325,7 +1325,7 @@ input:checked ~ #container-div-trending-voices img{ transform: translateX(-329px
     position:relative;
     top:-85px;
     z-index:999;
-    margin:10px;
+    margin:15px 25px 4px 0px;
     opacity:0.8;
 
 }
