--- a/css/prototype.css
+++ b/css/prototype.css
@@ -594,7 +594,7 @@ li.selected{
     /* height: 300px; */
     background-color: rgb(192, 199, 199);
     color: #fff;
-    font-family: 'liberation_serifregular';
+    font-family: 'Open Sans';
     font-size: x-large;
     text-align: center;
     line-height: 33px;
