--- a/css/prototype.css
+++ b/css/prototype.css
@@ -802,7 +802,7 @@ width: 290px;
 #comments-img {
     width: 100%;
     position: relative;
-    top: 30px;
+    top: 130px;
 
 }
 
@@ -1135,6 +1135,7 @@ input[type="checkbox"]{display:none;}
   width:100%;
   font-family: 'Open Sans', sans-serif;
   position: relative;
+  top:120px;
 
 }
 
@@ -1154,7 +1155,7 @@ input[type="checkbox"]{display:none;}
     background: linear-gradient(90deg, #D9534F 67%, green 33%);
     top: 5px;
     /*float:left;*/
-    width:100%;
+    width:96%;
     font-size: 18px;
     margin-left: 0px;
     color: white;
@@ -1178,7 +1179,7 @@ input[type="checkbox"]{display:none;}
 
 
 #footer {
-    margin-top: 50px;
+    margin-top: 140px;
     text-align: left;
     /*position:relative;*/
     background-color: #434343;
@@ -1377,31 +1378,10 @@ stroke-width: 4px;
 /*-----------------------------------------------------------------------------
 /*Trending Voices animation*/
 
-#trending-voices-div {
-   width:1400px;
-   height: 121px;
-   }
-
-#container-div-trending-voices{
-   width: 325px;
-   height: 121px;
-   border: none;
-   margin-bottom: 20px;
-   background: #f1f1f1;
-   overflow: hidden;
-   /*position: relative;*/
-   /*top: -20px;*/
-   margin: 0 auto;
-}
-
-#trending-voices-div img {
-  width: 325px;
-  height: 121px;
-  }
 
 #trending-voices-navig{
     position: relative;
-    top: -80px;
+    top: 100px;
 }
 
 #tv-left{float:left;}
@@ -1457,8 +1437,19 @@ input:checked ~ #container-div-trending-voices img{ transform: translateX(-329px
 }
 
 
-#Trending-Voice-Container{
- width:100%;
- margin-bottom:10px;
 
+
+.gallery{
+  position: relative;
+  margin: 20px 0px;
+}
+
+.gallery figure{
+  opacity: 0; 
+  position: absolute; 
+  top: 0;
+}
+
+.gallery figure.active-trend{
+  opacity: 1;
 }
