--- a/css/prototype.css
+++ b/css/prototype.css
@@ -1135,7 +1135,7 @@ input[type="checkbox"]{display:none;}
   width:100%;
   font-family: 'Open Sans', sans-serif;
   position: relative;
-  top:120px;
+  top:80px;
 
 }
 
@@ -1381,20 +1381,37 @@ stroke-width: 4px;
 
 #trending-voices-navig{
     position: relative;
-    top: 100px;
+    top: 20px;
+   
 }
 
-#tv-left{float:left;}
+#tv-left{
+float:left;
+position: relative;
+left: -10px;
+}
 #tv-right{
   float:right;
-  right: 13px;
+  right: -13px;
   position: relative;
 }
 
 #discussion-poll{clear: both;}
 
 .tv-navig{
-    width: 30px;
+  width: 30px;
+  height: 100px;
+  color: #008080;
+  font-weight: lighter;
+  padding: 6px 3px 3px 3px;
+  vertical-align: middle !important;
+  text-align: center;
+  font-size: 50px;
+  border-radius: 6px;
+  position: relative;
+  
+
+    /*width: 30px;
     height: 26px;
     background-color: #008080;
     color: #fff;
@@ -1404,7 +1421,7 @@ stroke-width: 4px;
     text-align: center;
     font-size: 20px;
     border-radius: 6px;
-    box-shadow: 1px 1px 3px #999;
+    box-shadow: 1px 1px 3px #999;*/)
 }
 
 input:checked ~ #container-div-trending-voices img{ transform: translateX(-329px); }
@@ -1446,7 +1463,8 @@ input:checked ~ #container-div-trending-voices img{ transform: translateX(-329px
 
 .gallery{
   position: relative;
-  margin: 20px 0px;
+  padding: 10px;
+
 }
 
 .gallery figure{
