--- a/css/prototype.css
+++ b/css/prototype.css
@@ -654,7 +654,7 @@ height: 300px;
     width: inherit;
 }
 
-#MessagePage .pageNr , #BlockMessagePage .pageNr{
+#BlockMessagePage .pageNr{
     visibility: hidden;
 }
 
